client/components/MainPage/Card/Card.module.css
.Card {
    --CardTitleBgColor: transparent;
    --CardBgImage: none;
    --CardBgImageHover: var(--CardBgImage, none);
    
    position: relative;
    z-index: 1;

    display: flex;
    flex-direction: column;
    align-items: flex-start;

    height: 100%;

    --smooth-corners: 0.8;
    padding: 16px;
    border-radius: 16px;
    background-image: var(--CardBgImage);
    background-position: 100% 100%;
    /* Fix bgimage offset */
    background-size: calc(100% + 1px) auto;
    background-repeat: no-repeat;
    color: white;
    text-decoration: none;
    transition: .15s ease background-color, .15s ease background-image, .15s ease filter;
    overflow: hidden;
    position: relative;
}

/* Preload hover images */
.Card:before {
    content: '';
    background-image: var(--CardBgImageHover);
}

.Card:active {
    filter: brightness(0.95);
}

.Card_Size-small {
    aspect-ratio: 1 / 1;
    max-width: 100%;
}

.Card_Size-large {
    grid-area: span 1 / span 2;
    aspect-ratio: 2 / 1;
    align-self: stretch;
}


.Card_Public {
    background-color: var(--cards-public-bg);
    color: var(--cards-public-text);
}

.Card_Public .CardTitle {
    text-decoration-color: rgba(4, 72, 21, .15);
}

.Card_Pedestrian {
    background-color: var(--cards-pedestrian-bg);
    color: var(--cards-pedestrian-text);
}

.Card_Pedestrian .CardTitle {
    text-decoration-color: rgba(76, 63, 0, .15);
}

.Card_Car {
    background-color: var(--cards-car-bg);
    color: var(--cards-car-text);
}

.Card_Car .CardTitle {
    text-decoration-color: rgba(92, 17, 10, .15);
}

.Card_Other {
    background-color: var(--cards-other-bg);
    color: var(--cards-other-text);
}

.Card_Other .CardTitle {
    text-decoration-color: rgba(12, 27, 39, .15);
}

.CardTitle {
    --smooth-corners: 0.8;
    border-radius: 8px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    position: relative;
    font-size: 16px;
    font-weight: 500;
    line-height: 1.05;
    margin-bottom: 8px;
    background-color: var(--CardTitleBgColor);
    text-decoration: underline;
    text-decoration-color: rgba(255, 255, 255, 0.2);
    text-underline-offset: 3px;
    transition: .15s ease color, .15s ease text-decoration;
}

.CardTitle.CardTitle_Bg {
    width: auto;
    padding: .5em .75em;
    color: white;
    text-decoration-color: rgba(255, 255, 255, 0.3);
}

.Card:active .CardTitle.CardTitle_Bg {
    text-decoration-color: rgba(255, 255, 255, 0.8);
}

.CardDynamic {
    width: 100%;
    margin-top: auto;
}

.CardFooterCaption, .CardFooterCaption_NoSubtitle {
    margin-top: auto;
    margin-bottom: 0;
    font-weight: 500;
}

.CardHeaderCaption {
    margin-top: 15px;
    font-size: 13px;
    line-height: 1.35;
}

.CardExternalLink {
    flex-shrink: 0;
    margin-left: 16px;
}

@media (hover: hover) {
    .Card:hover {
        background-image: var(--CardBgImageHover, var(--CardBgImage));
    }
    
    .Card_Public:hover {
        background-color: var(--cards-public-bg-hover);
        color: white;
    }

    .Card_Pedestrian:hover {
        background-color: var(--cards-pedestrian-bg-hover);
        color: white;
    }

    .Card_Car:hover {
        background-color: var(--cards-car-bg-hover);
        color: white;
    }

    .Card_Other:hover {
        background-color: var(--cards-other-bg-hover);
        color: white;
    }

    .Card:hover .CardTitle {
        text-decoration-color: rgba(255, 255, 255, 0.6);
    }
}

@media screen and (min-width: 375px) {
    .Card {
        padding: 24px;
    }

    .CardTitle {
        font-size: max(16px, 4vw);
    }

    .CardHeaderCaption {
        font-size: clamp(12px, 3vw, 20px);
    }

    .CardFooterCaption_NoSubtitle {
        font-size: clamp(20px, 7vw, 34px);
    }
}

@media screen and (min-width: 576px) {
    .CardInner {
        padding: 32px;
    }

    .CardTitle {
        font-size: max(24px, 4vw);
    }

    .CardHeaderCaption {
        font-size: clamp(16px, 4vw, 20px);
    }

    .CardFooterCaption {
        font-size: max(24px, 3vw);
    }

    .CardFooterCaption_NoSubtitle {
        font-size: max(8vw, 48px);
    }
}

@media screen and (min-width: 768px) {
    .Card {
        padding: 32px;
        border-radius: 24px;
    }

    .CardFooterCaption_NoSubtitle {
        font-size: 48px;
    }

    .CardTitle {
        font-size: 32px;
    }

    .CardHeaderCaption {
        font-size: 24px;
    }
}

@media screen and (min-width: 1200px) {
    .Card {
        padding: clamp(30px, 2vw, 40px);
    }

    .CardTitle {
        font-size: clamp(24px, 1.5vw, 32px);
    }

    .CardHeaderCaption {
        font-size: clamp(16px, 1.1vw, 24px);
        padding-right: 1em;
    }

    .CardFooterCaption {
        font-size: clamp(20px, 2vw, 34px);
        line-height: 1.3;
    }
}

@media screen and (min-width: 1440px) {
    .CardFooterCaption_NoSubtitle {
        font-size: clamp(30px, 3vw, 48px);
    }
}

